# algorithmic_toolbox

./: .gitignore  CMakeLists.txt
week1_programming_challenges/2_maximum_pairwise_product/: max_pairwise_product.cpp  max_pairwise_product.py
week2_algorithmic_warmup/1_fibonacci_number/: fibonacci.cpp  fibonacci.py
week2_algorithmic_warmup/2_last_digit_of_fibonacci_number/: fibonacci_last_digit.cpp  fibonacci_last_digit.py
week2_algorithmic_warmup/3_greatest_common_divisor/: gcd.cpp
week2_algorithmic_warmup/4_least_common_multiple/: lcm.cpp
week3_greedy_algorithms/1_money_change/: change.cpp
week3_greedy_algorithms/2_maximum_value_of_the_loot/: fractional_knapsack.cpp
week3_greedy_algorithms/3_car_fueling/: car_fueling.cpp
week3_greedy_algorithms/4_maximum_advertisement_revenue/: dot_product.cpp
