cmake_minimum_required(VERSION 3.19)
project(algoritmic_toolbox)

set(CMAKE_CXX_STANDARD 11)

add_executable(APlusB week1_programming_challenges/1_sum_of_two_digits/APlusB.cpp)
add_executable(max_pairwise_product week1_programming_challenges/2_maximum_pairwise_product/max_pairwise_product.cpp)
add_executable(fibonacci_number week2_algorithmic_warmup/1_fibonacci_number/fibonacci.cpp)
add_executable(last_digit_of_fibonacci_number week2_algorithmic_warmup/2_last_digit_of_fibonacci_number/fibonacci_last_digit.cpp)
add_executable(gcd week2_algorithmic_warmup/3_greatest_common_divisor/gcd.cpp)
add_executable(lcm week2_algorithmic_warmup/4_least_common_multiple/lcm.cpp)
add_executable(money_change week3_greedy_algorithms/1_money_change/change.cpp)
add_executable(knapsack week3_greedy_algorithms/2_maximum_value_of_the_loot/fractional_knapsack.cpp)

add_executable(max_adv_revenue week3_greedy_algorithms/4_maximum_advertisement_revenue/dot_product.cpp)